--- a/CSS-SEC/style.css
+++ b/CSS-SEC/style.css
@@ -1,8 +1,8 @@
-@import url(/CSS-SEC/global.css);
+@import url(./global.css);
 
-@import url(/CSS-SEC/header.css);
+@import url(./header.css);
 
-@import url(/CSS-SEC/calendario.css);
+@import url(./calendario.css);
 
 #painel-dia {
   position: absolute;
